@startuml
!pragma layout smetana

Title WebServ - Classes Overview

WebServer *-- Connection
Connection *-- Request
Connection *-- Response
Connection *-- VirtualServer

class WebServer
{
	-int _epollFd;

	-std::set<uint16_t> _ports;
	-std::map<int, uint16_t> _socketsToPorts;

	-std::vector<VirtualServer> _virtualServers;

	-std::map<int, Connection> _connectionMap;


	-std::set<std::string> _implementedMethods;
	-std::set<std::string> _unimplementedMethods;
	--

	+Webserver(void);
	+\~Webserver(void);
	+void init(void);
	+void run(void);

	+void setUpSockets(std::set<uint16_t> ports);
	+void bindSocket(void);
	+void startListening(void);

	+void addSocketsToEpoll(void);
	+void modifyEventInterest(int epollFd, int eventFd, uint32_t event);

	+int acceptConnection(int epollFd, int eventFd);
	+void checkTimeouts(void);
	+void setNonBlocking(int fd);

	+void parseRequest(Connection& connection);
	+void parseRequestLine(std::string& connectionBuffer, Request& request);
	+void parseMethod(std::string& requestLine, Request& request);
	+void parseTarget(std::string& requestLine, Request& request);
	+void parseVersion(std::string& requestLine, Request& request);

	+void parseHeader(std::string& connectionBuffer, Request& request);
	+void identifyVirtualServer(Connection& connection);
	+std::string captureFieldName(std::string& fieldLine);
	+std::string captureFieldValues(std::string& fieldLine);
	+void validateHeader(Request& request);

	+void parseBody(std::string& connectionBuffer, Request& request);

	+void fillResponse(Response& response, Request& request);

	+int consumeNetworkBuffer(int connectionFd, std::string& connectionBuffer);
}

note "Possibly could be static function" as N1
N1  .. WebServer::parseMethod
N1  .. WebServer::parseTarget
N1  .. WebServer::parseVersion

class VirtualServer
{
	+uint16_t port;
	+std::string name;

	+VirtualServer(int port, std::string name);
}

class	Request
{
	+std::string method;
	+std::string target;
	+std::map<std::string, std::string> headerFields;
	+std::string body;
	size_t contentLength;

	+bool parsedMethod;
	+bool parsedRequestLine;
	+bool parsedHeader;
	+bool parsedBody;

	+bool validatedHeader;

	+bool badRequest;

	+bool continueParsing;

	+bool isChunked;

	+Request(void);
}

class	Response
{
	+std::string statusLine;
	+std::map<std::string, std::string> headerFields;
	+std::string body;

	+std::string status;
	+std::string reasonPhrase;

	+bool isReady;
}

class Connection
{
	+int connectionFd;
	+uint16_t port;
	+std::string buffer;
	+Request request;
	+Response response;
	+VirtualServer* virtualServer;

	+bool error; ?
	+time_t lastActivity;

	+Connection(void);
	+Connection(int fd);
}

package "namespace Utils"
{
	object functions{
		str::string& trim(std::string& str);
		std::string getNextLineRN(std::string& buffer);
		std::string removeCRLF(std::string& fieldValue);
		void tolower(std::string &str);
	}
}

@enduml
